kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: hello-python-service
  annotations:
    service.beta.kubernetes.io/oci-load-balancer-shape: 10Mbps
spec:
  type: LoadBalancer
  ports:
    - port: 5000
      targetPort: http
      protocol: TCP
      name: http
  selector:
    app: hello-python
    version: tagver
    env: environment
    owner: maplelabs
