kubernetes/ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: hello-python
  annotations:
    kubernetes.io/ingress.class: tomcat-ingress
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - host: "tomcat-dev.recvue.com"
      http:
        paths:
          - path: /
            backend:
              serviceName: hello-python-service
              servicePort: 5000
